--- a/issues/1-march-14-23.html
+++ b/issues/1-march-14-23.html
@@ -244,6 +244,8 @@ hr {
       <br/><br/>
       I hope this newsletter iterates a lot over the next months as I learn more about what works for you folks who read it. Please let me know what you like and your feedback by replying directly to this email. I'll respond to everyone.
       <br/><br/>
+      Today I'm talking about the nature of a people-first mindset and a basic framework you can use to reflect & level up your approaches to managing people.
+      <br/><br/>
       Enjoy and peace and love,
       <br/><br/>
       - Adam
@@ -367,12 +369,12 @@ hr {
       <br/><br/>
       <strong>1. Everyone is different and has ever changing needs.</strong>
       <br/>
-      Beneath our job descriptions, we are all uniquely shaped human beings; Our own values, motivations, interests and personalities. And these aren't static either, they change as our lives change. Think about all the times you've needed something different from your employer. Your first job, your first management role, that really stressful week, that year you're really pushing your career, those few months you need some breathing space. As a manager, we have to make space for everyone and their needs.
+      Beneath our job descriptions, we are all uniquely shaped human beings; Our own values, motivations, interests and personalities. And these aren't static either, they change as our lives change. Think about all the times you've needed something different from your employer. Your first job, your first management role, that really stressful week, that year you're really pushing your career, those few months you need some breathing space. As a manager, we have to make space for humans and not just workers.
 
       <br/><br/>
       <strong>2. Many new people challenges pop up on the weekly.</strong>
       <br/>
-      There are definitely themes when it comes to management: feedback, performance, deliverables, personal & career development and so on. However, humans are complex and unique and every time you face a new people challenge it will feel new. Maybe you feel comfortable having salary conversations until that one new time where someone feels very undervalued, is angry and hands their notice in on the spot - what do you do then?! These new situatations never stop, and you have to act on the spot.
+      There are themes when it comes to management: feedback, performance, deliverables, personal & career development and so on. However, humans are complex and unique and every time you face a new people challenge it will feel new. Maybe you feel comfortable having salary conversations until that one new time where someone feels undervalued, is angry and hands their notice in on the spot - what do you do then?! These new situatations never stop, and you have to act on the spot.
 
       <br/><br/>
       <strong>3. You have many responsibilities to balance at once.</strong>
@@ -382,7 +384,7 @@ hr {
       <br/><br/>
       <strong>So what can you do?</strong>
       <br/>
-      Get ahead of these challenges by building your own People Management Playbook (see below for a template). Naturally, as you gain experience and learn new things, you'll develop a mental model for people management and a set of approaches for how you handle different situations. The trick is to make this an intentional process by writing it down, reflecting and proactively filling your gaps.
+      Get ahead of these challenges by building up your own People Management Playbook (see below for a template). Naturally, as you gain experience and learn new things, you'll develop a mental model for people management and a set of approaches for how you handle different situations. The trick is to make this an intentional process by writing it down, reflecting and proactively filling your gaps.
       <br/><br/>
       While you can't develop a system to answer everything (see: humans have no standard api), you can totally build a guiding framework for different challenges along with techniques and resources to deal with them.
       <br/><br/>
@@ -398,9 +400,10 @@ hr {
       <br/> <br/>
       Next, under each of those, list a bunch of common (and not so common!) situations that come up, both hypothetical and based on your actual experiences.
       <br/> <br/>
-      Finally, to support you in those situations, collect your approaches, techniques, templates, resources, "expert contacts" and anything else that helps you tackle these challenges in practice.
+      Finally, to support you in those situations, collect your approaches, techniques, templates, resources, "expert contacts" and anything else that helps you tackle them in practice.
       <br/> <br/>
-      Now, the next time you need to quickly switch gears to one of situations, you have a place to start. And while it won't answer every problem, it will provide some guidance, a place to consider your possible approaches to suit the situation, and give you a shortcut to starting that conversation right. Don't forget to reflect back after new experiences and update your playbook.
+      
+      Now you have a place to visit, quickly navigate, and find approaches and supportive resources when you face these situations in the future. Remember to reflect and update situations as you experience new ones to continue your learning, and capture all the useful resources you come across in your people first management journey.
       </p>
 
       <br/><hr><br/>
