--- a/issues/1-march-14-23.html
+++ b/issues/1-march-14-23.html
@@ -182,7 +182,7 @@ hr {
       <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;" align="left">
         
   <div style="font-size: 12px; line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="line-height: 140%;">A quick reminder: you're signed up for the <a rel="noopener" href="https://www.hejtop.com" target="_blank">hejtop.com</a> newsletter written by me (Adam). I share ideas, tactics and resources for engineering managers to grow and put people first.</p>
+    <p style="line-height: 140%;">A quick reminder: you're signed up for the <a rel="noopener" href="https://www.hejtop.com" target="_blank">hejtop.com</a> newsletter written by me (Adam). I share ideas, tactics and resources to grow as a people-first engineering manager.</p>
   </div>
 
       </td>
