updated share link to github

--- a/issues/2-march-21-23.html
+++ b/issues/2-march-21-23.html
@@ -844,7 +844,7 @@ center {
     <tr>
       <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;" align="left">
         
-  <h4 style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 14px; "><strong>Like what you read above?</strong> <a rel="noopener" href="https://newsletter.hejtop.com/" target="_blank">Click here</a> to share it with someone else who would like it too.</h4>
+  <h4 style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 14px; "><strong>Like what you read above?</strong> <a rel="noopener" href="https://github.com/adamblanchard/hejtop-newsletter" target="_blank">Click here</a> to share it with someone else who would like it too.</h4>
 
       </td>
     </tr>
