Added welcome section

--- a/issues/4-april-04-23.html
+++ b/issues/4-april-04-23.html
@@ -268,11 +268,54 @@ center {
     <p style="line-height: 140%;">
 
     <!-- CONTENT GOES HERE -->
-    ASDF
+    Helloooo engineering leaders!
     <br/><br/>
-    <!-- END CONTENT -->
+    I started Hejtop to help engineering leaders become better people managers. Since the start of this year, I've been surveying and interviewing everyone who had enough time to share their experiences with me.
+    <br/><br/>
+    I gathered loads of interesting insight, so decided to summarise it in a report that I could share with you lovely folks (transparency ftw).
+    <br/><br/>
+    Check it out below:
+    <br/><br/>
+    <a href="https://www.hejtop.com/report-growing-developers-as-a-people-first-engineering-leader" target="_blank">
+    <center><strong>A research report: Growing developers as a people-first engineering leader</strong></center><br/>
+    <img align="center" border="0" src="https://images.squarespace-cdn.com/content/63fcbb019035392cbc0d1b8f/67c81294-27fd-46e7-a68a-9ab096eb8f9e/Page+template+%284%29.png?content-type=image%2Fpng" alt="" title="" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 40%;max-width: 480px; padding-left:30%" width="480"/>
+    </a>
+    <br/><br/>
 
 
+    <br/>
+    <h1 style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 22px; "><strong>
+      <!-- TITLE GOES HERE -->
+      New stuff on hejtop.com
+      <!-- END TITLE -->
+    </strong></h1>
+
+    I've added more content to the website. Here's the interesting bits:
+    <br/><br/>
+    <strong>→  <a href="https://www.hejtop.com/resources" target="_blank">Resources</a></strong> - A collection of useful posts, reports (including the one above) and notion templates to help you learn and improve.
+    <br/><br/>
+    <strong>→ <a href="https://www.hejtop.com/services" target="_blank">Services</a></strong> - An intro to how I help engineering leaders improve with coaching and consulting.
+    <br/><br/>
+    <strong>→ <a href="https://www.hejtop.com/testimonials" target="_blank">Testimonials</a></strong> - Collection of reviews that others have shared with me after working together.
+    <br/><br/>
+
+
+
+    <br/>
+    <h1 style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 22px; "><strong>
+      <!-- TITLE GOES HERE -->
+      Questions & answers
+      <!-- END TITLE -->
+    </strong></h1>
+    I'm continuing to experiment with content ideas for this newsletter (and LinkedIn). I've been collecting some questions from engineering leaders and answering them with as much pragmatic advice as possible.
+    
+    <br/><br/>You can see the first two in today's issue.
+
+    <br/><br/>Like this idea? Help me get it off the ground by sharing your own questions <a href="https://forms.gle/mF9oEH7Gaukwiv3p7" target="_blank">here</a>.
+
+
+
+    <br/><br/> <br/>
     Enjoy and peace and love,
     <br/><br/>
     - Adam
