--- a/issues/5-april-11-23.html
+++ b/issues/5-april-11-23.html
@@ -567,7 +567,7 @@ center {
       You need to be available, reactive and ready to unblock your team.
       <br/><br/>
 
-      Deliberate focus time (which is still important) becomes a deliberate responsibility. Switch off distractions, set time boundaries, block time and make sure you don't miss out on some much needed inside-your-brain time.
+      Deliberate focus time (which is still important) becomes a deliberate choice. Switch off distractions, set time boundaries, block time and make sure you don't miss out on some much needed inside-your-brain time.
 
       <br/><br/>
       <!-- END CONTENT -->
