--- a/issues/13-june-06-23.html
+++ b/issues/13-june-06-23.html
@@ -272,11 +272,11 @@ center {
     <br/><br/>
     We still promote managers who don't want to manage.<br/>
     We still strangle people's growth with arbitrary boxes. <br/>
+    We still prioritise filling roles over individual potential. <br/>
     We still lack the understanding to help people learn. <br/>
-    We still financially incentivize only vertical growth.<br/>
-    We still prioritise roles over individual potential.
+    We still financially incentivize vertical growth only.
     <br/><br/>
-    It starts with seeing people as real, individual humans who bring their entirely unique self, skills, character, influence, ambition and needs to a company.
+    It starts with seeing people as real, individual humans who bring their entirely unique self, skills, character, influence, ambition and needs to their job.
     <br/><br/>
     In this issue, find two very practical methods to start managing whole humans.
     <!-- END CONTENT -->
@@ -284,10 +284,6 @@ center {
     Enjoy and peace and love,
     <br/><br/>
     Adam
-
-    
-
-
 
       
     </p>
