added image credit

--- a/issues/14-june-13-23.html
+++ b/issues/14-june-13-23.html
@@ -398,6 +398,8 @@ center {
       
       
       <!-- CONTENT GOES HERE -->
+      <center><i>(image inspo: <a href="https://100soft.shop/pages/dumpster-fire" target="_blank">100soft</a>)</i></center>
+      <br/><br/>
       I work with start ups on all things people leadership and development. Although the benefits of good people development benefits are wide reaching, there is one financial cost that is useful to evaluate. Both since it's so eye opening, and also because sometimes (sadly) it takes real money numbers to convince the people around us that it's worth investing in.
       <br/><br/>
       There's one thing to take away: <strong>a lack of effective people development is freakin' expensive.</strong>
