--- a/issues/18-july-11-23.html
+++ b/issues/18-july-11-23.html
@@ -192,7 +192,7 @@ center {
   <h3 style="margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-size: 18px; ">
     
     <!-- ISSUE AND DATE GOES HERE -->
-    Issue #X - MONTH DATE '23
+    Issue #18 - July 11 '23
     <!-- END ISSUE AND DATE -->
   
   </h3>
