--- a/issues/18-july-11-23.html
+++ b/issues/18-july-11-23.html
@@ -407,11 +407,11 @@ center {
       <br/><br/>
       Flat hierarchies, lack of promotions, inexperienced managers, weak career frameworks, changing priorities.
       <br/><br/>
-      Without clear expectations, career progression and what "good" performance looks like is an ever-changing, hard to grasp concept in startups. For those looking for guard railes to grow, it's a brick wall.
+      Without clear expectations, career progression and what "good" performance looks like is an ever-changing, hard to grasp concept. For those looking for guard rails to grow, it's a brick wall.
       <br/><br/>
-      The flip side is these small company environments have great flexibility and often big vacuums of space for people to fill. It's not always easy for everyone to get these opportunities though. The risk of them going wrong is high, since the fact these vacuums exist in the first place means they'll also be a lack of support for the people trying to fill them.
+      The flip side is these small company environments often have great flexibility and big vacuums of space for people to fill. It's not always easy for everyone to access these opportunities though. The risk of them going wrong is high, since the fact these vacuums exist in the first place means they'll also be a lack of support for the people trying to fill them.
       <br/><br/>
-      With these kind of environments in mind, let's look at how we can accept the flexibility but still provide a support growth environment for our teams.
+      With these kind of environments in mind, let's look at how we can accept the flexibility but still provide a supportive growth environment for our teams.
       <ol>
         <li><strong>A coaching approach to facilitate bottom-up development.</strong>
             <br/>
@@ -425,7 +425,7 @@ center {
             <br/><br/>
         <li><strong>Swap out your complicated, top-down career framework with a growth stack accessible by everyone.</strong>
           <br/>
-          When people want to grow, it's easy to go straight to the job titles and levels that are on the table. It doesn't do much to answer what people are really looking for, how they want to develop, or what strategies are possible for them.
+          When people want to grow, it's easy to go straight to the job title promotions that are on the table. It doesn't do much to answer what people are really looking for, how they want to develop, or what strategies are possible for them.
           <br/>
           The best starting point is to map out the different growth tools and opportunities that are (or should be) possible today. I mean draw a literal diagram. Share it, evaluate the gaps, and only then you might see where a bigger career framework might help. In the meantime, you get free transparency on what's possible already.
           <br/><br/>
