--- a/issues/19-july-18-23.html
+++ b/issues/19-july-18-23.html
@@ -274,7 +274,7 @@ center {
     <br/><br/>
     I'd love to hear what you think and how you express ideas around the topic below - just reply to this email :-)
     <!-- END CONTENT -->
-
+    <br/><br/>
     Enjoy and peace and love,
     <br/><br/>
     Adam
@@ -412,11 +412,11 @@ center {
       <br/><br/>
       In the current status quo of how organisations are structured, friendship is not possible.
       <br/><br/>
-      If we want to do things differently, redifine what management roles mean, and where power lies in hierarchies, then we would have to organise differently.
+      If we want to do things differently, to redefine what management roles mean, and where power lies in our hierarchies, then we would have to organise differently.
       <br/><br/>
       There are companies who are exploring and experimenting with new ways of doing things in this regard. They are worth checking out for learning and inspiration. I'll link them down below.
       <br/><br/>
-      In the end, in your current situation, accept this power difference, and be the best manager you can. You can still have a mega impact on people's lives without being their friends.
+      In the end, in your current situation, accept this power difference, and be the best manager you can. You can still have a mega impact on people's lives without being friends.
       <br/><br/>
       <!-- END CONTENT -->
 
